--- a/css/mypage.css
+++ b/css/mypage.css
@@ -101,7 +101,6 @@ body {
 }
 
 .active-button {
-    border-bottom: #fafafa solid 1px;
 }
 
 .account_box {
@@ -109,6 +108,13 @@ body {
     right: 0;
     width: 200px;
     float: left;
+}
+
+.account_box > img{
+    border-radius: 50%;
+    margin-top: 12.5px;
+    float: left;
+    margin-right: 10px;
 }
 
 #login,
