--- a/css/style.css
+++ b/css/style.css
@@ -195,26 +195,23 @@ em{
 .container{
     width: 80%;
     height: 80%;
-    margin: 0 auto;
+    margin: 55px auto 0;
     padding-top: 10%;
 }
 
-.inside-box{
-    width: 50%;
-    height: 100%;
-    float: left;
+.about{
+    width: 100%;
+    height: 200px;
     text-align: center;
 }
-
-.inside-box h1{
+.about > h1{
     font-family: 'lobster';
     font-size: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
-
-.describe{
-    width: 100%;
-    
+.about > p{
+    font-size: 20px;
+    line-height: 30px;
 }
 
 /* main */
