--- a/css/checklist.css
+++ b/css/checklist.css
@@ -278,7 +278,7 @@ em {
     padding-bottom: 30px;
 }
 
-/* timeline */
+/* timeline src: http://codepen.io/jordanlachance/pen/ZWOoBQ */
 
 #timeline{
     width: 85%;
