--- a/css/mypage.css
+++ b/css/mypage.css
@@ -829,6 +829,33 @@ list-style-type: none;
         transform: translateX(0%);
     }
 }
+li a span{
+  position: absolute;
+  opacity: 0;
+  top: -50px;
+    left: -60px;
+  width: 85px;
+  padding: 10px;
+  border-radius: 2px;
+  background: #196090;
+  color: #fff;
+  font-size: 17px;
+  line-height: 1;
+  transition: .3s;
+}
+li a span:after{
+  position: absolute;
+  top: 100%;
+  height: 0;
+  width: 0;
+  border: 6px solid transparent;
+  border-top: 6px solid #196090;
+  content: "";
+}
+li a:hover span{
+  opacity: 1;
+  top: -40px;
+}
 
 
 /* timeline */
